# CrushClone

./: .gitignore  CMakeLists.txt  CrushCloneThemeV3.jsx  LICENSE  README.md
.github/scripts/: create-pkg.sh  installer.nsi
.github/workflows/: build-and-release.yml  build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Compressor.cpp  Compressor.h  Distortion.cpp  Distortion.h  LadderFilter.cpp  LadderFilter.h  Oversampler.cpp  Oversampler.h
Source/WebUI/: crushclone.html
